# kedro-test

./: README.md  pyproject.toml
conf/base/: logging.yml
src/kedro_test/: settings.py
